<resources>
    <string name="app_name">CueDes</string>

    <string name="alarm_item_alarm_name">Alarm:</string>
    <string name="alarm_item_location_name">Location:</string>
    <string name="alarm_item_radius_name">Radius:</string>
    <string name="alarm_item_latitude">Latitude:</string>
    <string name="alarm_item_longitude">Longitude:</string>
    <string name="alarm_addition_location_name">Location Name</string>
    <string name="alarm_addition_latitude">Latitude</string>
    <string name="alarm_addition_longitude">Longitude</string>
    <string name="alarm_addition_radius">Radius</string>

    <string name="menu_locate">Dashboard</string>
    <string name="menu_alarms">Alarms</string>
    <string name="menu_settings">Settings</string>


    <string name="alarm_addition_get_destination">Get Destination</string>
    <string name="alarm_addition_location_pin_image_description">Location Pin Image</string>
    <string name="alarm_addition_close">Close</string>
    <string name="alarm_addition_add">Add</string>
    <string name="main_permission_msg">Please give location based permission for the app in order to proceed</string>
</resources>