<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foregroundTint="#EB1F1F">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="5dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/textViewLocationName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm_item_location_name"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            app:layout_constraintStart_toEndOf="@+id/textViewLocationName"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Alarm Text"/>

        <TextView
            android:id="@+id/textViewLatitudeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm_item_latitude"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLocationName" />

        <TextView
            android:id="@+id/textViewLongitudeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm_item_longitude"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLatitudeName" />

        <TextView
            android:id="@+id/textViewRadiusName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm_item_radius_name"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLongitudeName" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchAlarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:soundEffectsEnabled="true"
            android:theme="@style/ThemeOverlay.AlarmSwitchCompat"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>